--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,14 @@
         }
     ],
     "require": {
-        "php": "^5.4|^7.0"
+        "ext-curl": "*",
+        "ext-mbstring": "*",
+        "php": "^8.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "mockery/mockery": "~0.8",
-        "guzzlehttp/guzzle": "~5.0"
+        "phpunit/phpunit": "^8.4|^9.0",
+        "mockery/mockery": "^1.3.1",
+        "guzzlehttp/guzzle": "^7.3.0"
     },
     "suggest": {
         "paragonie/random_compat": "Provides a better CSPRNG option in PHP 5",
